dashboard layout in place. booking cards started and item card description overflow fixed

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -56,6 +56,7 @@
 .item-card-description {
   grid-column: 1 / span 1;
   grid-row: 4 / span 1;
+  overflow: hidden;
   // background-color: yellow;
 }
 .item-card-description p {
